@@ -1,0 +1,2 @@
+<?php echo $page->intro ?>
+<?php echo $page->body ?>
