@@ -1,3 +1,6 @@
+# Remove # in the following line if your web hoster is UD Media GmbH
+#AddHandler php5-fastcgi .php
+
 # Turn on URL rewriting
 RewriteEngine On
 
